--- a/css/register.css
+++ b/css/register.css
@@ -1,9 +1,3 @@
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: white;
-  margin: 0;
-  padding: 16px;
-}
 
 * {
   box-sizing: border-box;
@@ -13,6 +7,7 @@ body {
 .employee_register {
   margin-top: 20px;
   background-color: white;
+  margin-bottom: 15%;
 }
 
 .header{
@@ -40,16 +35,6 @@ body {
     padding: 10px;
     padding-left: 30px;
     color: white;
-}
-
-footer{
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    color: #ffffff;
-    text-align: center;
-    background-color: #466692;
 }
 
 /* Full-width input fields */
